# memmap2-rs

./: Cargo.toml  README.md
.github/workflows/: main.yml
examples/: cat.rs
src/: lib.rs  unix.rs
