[package]
name = "memmapix"
version = "0.5.4"
authors = ["Dan Burkert <dan@danburkert.com>", "Yevhenii Reizner <razrfalcon@gmail.com>", "Al Liu <scygliu1@gmail.com>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/al8n/memmapix"
documentation = "https://docs.rs/memmapix"
description = "No libc, pure Rust cross-platform Rust API for memory-mapped file IO"
keywords = ["mmap", "memory-map", "memmap2", "io", "file"]
categories = ["filesystem", "external-ffi-bindings"]
edition = "2018"

[target.'cfg(unix)'.dependencies]
rustix = { version = "0.35", features = ["fs", "mm", "param"] }

[dev-dependencies]
tempfile = "3"
owning_ref = "0.4.1"
